<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/nav_preferences"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/nav_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>