<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="155dp"
    tools:context=".FactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/articleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/subHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/subHeaderText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle3"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle4"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle6"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText5"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle7"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText6"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle8"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText7"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle9"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText8"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle10"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText9"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/articleTitle11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/articleTitle11"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/regText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:text = "@string/regText10"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "15dp"
            android:layout_marginBottom="15dp"
            android:text = "@string/source"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />
    </LinearLayout>
</ScrollView>
