<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="155dp"
    tools:context=".FactsFragment">

        <TextView
            android:id="@+id/totalQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/totalQuestions"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:textStyle="bold"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_above="@id/choices_layout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansA"
            android:layout_margin="5dp"
            android:text="@string/ansA"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansB"
            android:layout_margin="5dp"
            android:text="@string/ansB"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansC"
            android:layout_margin="5dp"
            android:text="@string/ansC"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansD"
            android:layout_margin="5dp"
            android:text="@string/ansD"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choices_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/submit" />
</RelativeLayout>