<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="155dp"
    tools:context=".FactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resourceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/resourceTitle"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/addArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/addArticle"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/articleLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop= "15dp"
            android:text = "@string/articleLink"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/articleLink2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop= "15dp"
            android:text = "@string/articleLink2"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/addVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop= "10dp"
            android:text = "@string/addVideo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/videoLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop= "15dp"
            android:text = "@string/videoLink"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/videoLink2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop= "15dp"
            android:text = "@string/videoLink2"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>