<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".DiscussionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discussion_forum"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/newPostedTopics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Posted topics will be added here -->
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/topicTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/topicTitle"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/topicDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autofillHints=""
        android:hint="@string/topicDescription"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/postTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postTopic"/>

</LinearLayout>
